--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<div class="home-container">
+    <h2>Product Catalog</h2>
+  
+    <div *ngIf="products.length === 0" class="empty-message">
+      <p>No products available.</p>
+    </div>
+  
+    <div class="product-list">
+      <div class="product-card" *ngFor="let product of products">
+        <img [src]="product.imageUrl" alt="{{ product.name }}" class="product-image" />
+        <h3>{{ product.name }}</h3>
+        <p>{{ product.description }}</p>
+        <p class="price">{{ product.price | currency }}</p>
+        <button (click)="addToCart(product)">Add to Cart</button>
+      </div>
+    </div>
+  </div>
+  
